<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/lightColorPrimary">

    <include android:id="@+id/header" layout="@layout/header"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginTop="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/personal_information"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <RelativeLayout
            android:id="@+id/profile_image_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/default_profile"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/change_profile_image"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignEnd="@+id/profile_image"
                android:layout_alignBottom="@+id/profile_image"
                android:background="@drawable/round_one"
                android:padding="5dp"
                android:tint="@color/colorPrimary"
                android:src="@drawable/ic_photo_camera_24dp" />

        </RelativeLayout>

        <EditText
            android:id="@+id/first_name"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/first_name"
            android:background="@drawable/edit_text_gradient_bg"
            android:layout_marginTop="25dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:inputType="text"
            android:textColorHint="@color/greyWhite"
            android:textColor="@color/greyWhite"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/last_name"
            android:background="@drawable/edit_text_gradient_bg"
            android:layout_marginTop="25dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:inputType="text"
            android:textColorHint="@color/greyWhite"
            android:textColor="@color/greyWhite"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/by_signing_up_you_confirm_that_you_accept"
            android:textSize="13sp"
            android:textColor="@color/greyWhite"/>

        <LinearLayout
            android:id="@+id/done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="130dp"
            android:layout_marginTop="25dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:background="@drawable/rectangle_corner_round_one"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/done"
                android:textSize="15sp"
                android:textColor="@color/greyWhite" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>