<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <include android:id="@+id/header" layout="@layout/home_header"/>

    <fragment
        android:id="@+id/map_fragment"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintTop_toBottomOf="@+id/header"/>

    <RelativeLayout
        android:id="@+id/user_layout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/lightGrey"
        app:layout_constraintTop_toBottomOf="@+id/map_fragment">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginEnd="5dp"
                android:src="@drawable/default_profile"/>

            <TextView
                android:id="@+id/full_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Lija"
                android:textColor="@color/black"
                android:textSize="16sp"/>

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@+id/user_layout">

        <TextView
            android:id="@+id/inviteToCurrent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/invite_to_current"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/greyWhite"/>

        <TextView
            android:id="@+id/requestToShare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/request_to_share"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/greyWhite"/>

        <TextView
            android:id="@+id/inviteForMeet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/invite_for_meet"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/greyWhite"/>

        <TextView
            android:id="@+id/scheduleAndMeet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/schedule_and_meet"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/greyWhite"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>