<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/lightColorPrimary"
    xmlns:tools="http://schemas.android.com/tools">

    <include android:id="@+id/header" layout="@layout/header"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/register_with_your_phone_number"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/on_easymeet_your_phone_number_is_your_account_identifier_that_lets_you_connect_with_your_friends"
            android:textSize="13sp"
            android:textStyle="bold"
            android:textColor="@color/greyWhite"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/edit_text_gradient_bg">

            <TextView
                android:id="@+id/countryCode"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:drawableEnd="@drawable/ic_arrow_drop_down_24dp"
                android:drawableTint="@color/greyWhite"
                android:paddingStart="15dp"
                android:paddingEnd="0dp"
                android:gravity="center"
                android:text="Country Code"
                android:textColor="@color/greyWhite"
                android:textSize="14sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/mobile"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:hint="@string/mobile"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:background="@color/transparent"
                android:inputType="phone"
                android:textColorHint="@color/greyWhite"
                android:textColor="@color/greyWhite"
                android:textSize="14sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="130dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:background="@drawable/rectangle_corner_round_one"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/greyWhite" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="5dp"
                android:src="@drawable/ic_arrow_forward_24dp"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>